fixed gap in feminism

--- a/css/format.css
+++ b/css/format.css
@@ -214,7 +214,6 @@ a.edulinks {
 }
 
 .feminismrow {
-    margin-top: 20px;
     background-color: #ffb3d9;
 
 }
